# perpetual

./: Cargo.toml  LICENSE
.playgrounds/: perpetual.mongodb
src/: lib.rs  main.rs
src/db/: lang.rs  mod.rs  models.rs  recipient.rs  user.rs  user_dao.rs
src/errors/: mod.rs
src/routes/: base.rs  mod.rs  test_routes.rs  user.rs
src/static/root/: index.html
static/css/: bootstrap.css  custom.min.css
static/js/: addRecipient.js  checkUnique.js  global.js
templates/: add-recipient.html  base.html  error.html  index.html  loggedin.html  login.html  navbar.html  resources.html  signup.html
tests/: basic_db_ops.rs  health_check.rs  hello_name.rs  mongo_conn.rs
tests/helpers/: mod.rs
