[package]
name = "perpetual"
version = "0.1.0"
authors = ["Nathan <terakilobyte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = { version = "=4.0.0-beta.3", features = ["secure-cookies"] }
log = "0.4.11"
env_logger = "0.8.2"
actix-rt = "2.0.2"
mongodb = "2.0.0-alpha"
serde = "1.0.123"
serde_json = "1.0.62"
anyhow = "1.0.38"
gregorian = "0.2.1"
actix-files = "0.6.0-beta.2"
tera = "1.6.1"
actix-session = { git = "https://github.com/andy128k/actix-extras", branch = "update-dependencies" }
derive_more = "0.99.11"

[dev-dependencies]
reqwest = "0.11"
tokio = "1.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
